--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 body{
@@ -11,18 +12,42 @@ body{
 .container{
     display:flex;
     flex-wrap: wrap;
-    width: 860px;
+    width: 960px;
     margin: 0 auto;
     gap: 4px;
 }
 
 .square{
-    height: 50px;
     background-color:white;
-    flex: 0 1 50px;
+    flex: 0 1 auto;
 }
 
 .over{
     background-color:black;
 }
 
+.buttons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+}
+
+.buttons button{
+    font-size: 24px;
+    color: black;
+    background-color: white;
+    border:none;
+    padding: 8px 16px;
+    margin: 0 24px;
+    border-radius: 4px;
+}   
+
+footer{
+    background-color: rgb(26, 26, 26);
+    text-align: center;
+    align-content: center;
+    color:white;
+    padding: 24px;
+    margin-top: 36px;
+}
